--- a/index.html
+++ b/index.html
@@ -19,5 +19,29 @@
     <script src="main.js" defer></script>
   </head>
 
-  <body></body>
+  <body>
+    <!-- Navbar -->
+    <nav id="navbar"></nav>
+    <div class="navbar_logo">
+      <i class="fas fa-star"></i>
+      <a href="#">Shinwook</a>
+    </div>
+   
+    <ul class="navbar_menu">
+      <li class="navbar_munu_item">Home</li>
+      <li class="navbar_munu_item">About me</li>
+      <li class="navbar_munu_item">Skills</li>
+      <li class="navbar_munu_item">My work</li>
+      <li class="navbar_munu_item">Contact</li>
+    </ul>      </ul>
+    </div>
+    <!-- About -->
+    <section id="about"></section>
+    <!-- Skills -->
+    <section id="skills"></section>
+    <!-- Work -->
+    <section id="work"></section>
+    <!-- Contact -->
+    <section id="contact"></section>
+  </body>
 </html>
