--- a/index.html
+++ b/index.html
@@ -1,47 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shinwook's portfolio</title>
-    <meta name="description" content="エンジニアを準備しているシンウク" />
-    <meta name="author" content="Shinwook" />
-    <link rel="icon" type="image/png" href="image/favicon2.png" />
-    <script
-      src="https://kit.fontawesome.com/6c4a511c66.js"
-      crossorigin="anonymous"
-    ></script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <script src="main.js" defer></script>
-  </head>
 
-  <body>
-    <!-- Navbar -->
-    <nav id="navbar"></nav>
-    <div class="navbar_logo">
-      <i class="fas fa-star"></i>
-      <a href="#">Shinwook</a>
-    </div>
-   
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shinwook's portfolio</title>
+  <meta name="description" content="エンジニアを準備しているシンウク" />
+  <meta name="author" content="Shinwook" />
+  <link rel="icon" type="image/png" href="image/favicon2.png" />
+  <script src="https://kit.fontawesome.com/6c4a511c66.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="main.js" defer></script>
+</head>
+
+<body>
+  <!-- Navbar -->
+  <nav id="navbar"></nav>
+  <div class="navbar_logo">
+    <i class="fas fa-star"></i>
+    <a href="#">Shinwook</a>
+  </div>
+  <div class="navbar_munu">
     <ul class="navbar_menu">
       <li class="navbar_munu_item">Home</li>
       <li class="navbar_munu_item">About me</li>
       <li class="navbar_munu_item">Skills</li>
       <li class="navbar_munu_item">My work</li>
       <li class="navbar_munu_item">Contact</li>
-    </ul>      </ul>
-    </div>
-    <!-- About -->
-    <section id="about"></section>
-    <!-- Skills -->
-    <section id="skills"></section>
-    <!-- Work -->
-    <section id="work"></section>
-    <!-- Contact -->
-    <section id="contact"></section>
-  </body>
+
+    </ul>
+    </ul>
+  </div>
+  <!-- Home -->
+  <section id="Home"></section>
+  <img src="image/3.5X4.5 KANGSHINWOOK.jpg" alt="Shinwook's portfolio photo" class="home_avatar">
+  <h1 class="home_title">初めまして　<br />私は姜　信郁と申します。</h1>
+  <h2 class="home_description">開発エンジニアになり、自分の価値を上がりたいと考えている韓国人です。。</h2>
+  <button class="home_contact">Contact Me</button>
+
+  <!-- About -->
+  <section id="about"></section>
+  <!-- Skills -->
+  <section id="skills"></section>
+  <!-- Work -->
+  <section id="work"></section>
+  <!-- Contact -->
+  <section id="contact"></section>
+</body>
+
+
 </html>
