--- a/index.html
+++ b/index.html
@@ -40,7 +40,36 @@
   <button class="home_contact">Contact Me</button>
 
   <!-- About -->
-  <section id="about"></section>
+  <section id="about">
+    <h1>About me</h1>
+    <p>現在まで、開発やit 業界で経験はありません。私は航空宇宙工学科を専攻し、１９年度大学を卒業しました。<br />人材派遣で19年５月から三菱重工業　民間航空機　生産技術部に配属され、生産管理及びドキュメント手順作成等
+      の業務を担当しました。<br />現在は開発エンジニアを目標として、最近WEB HTML , CSS, Jabascript を独学で進めております。
+      <br />今回のfortfolioは現在、知識が足りない私に勉強の為、作成しております。
+    </p>
+    <div class="abuout_majors">
+      <div class="major_icon"></div>
+      <i class="fas fa-plane"></i>
+      <div class="major_title">生産技術</div>
+      <div class="major_description"></div>
+      ドキュメント手順作成、治工具オーダー作成、生産管理
+    </div>
+    <div class="abuout_majors">
+      <div class="major_icon"></div>
+      <i class="fab fa-html5"></i>
+      <div class="major_title">フロントエンド</div>
+      <div class="major_description"></div>
+      現在、HTML, CSS, javascriptを勉強中です。
+    </div>
+    <div class="about_jobs"></div>
+    <div class="job">
+      <img src="image/jobs/mitu.png" alt="三菱重工業" class="job_logo">
+      <p class="job_name"></p>
+      生産技術者
+      <p class="job_period"></p>
+      2019年5月から2020年6月10日
+    </div>
+    <div class="job"></div>
+  </section>
   <!-- Skills -->
   <section id="skills"></section>
   <!-- Work -->
