--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   <section id="about">
     <h1>About me</h1>
     <p>現在まで、開発やit 業界で経験はありません。私は航空宇宙工学科を専攻し、１９年度大学を卒業しました。<br />人材派遣で19年５月から三菱重工業　民間航空機　生産技術部に配属され、生産管理及びドキュメント手順作成等
-      の業務を担当しました。<br />現在は開発エンジニアを目標として、最近WEB HTML , CSS, Jabascript を独学で進めております。
-      <br />今回のfortfolioは現在、知識が足りない私に勉強の為、作成しております。
+      の業務を担当しました。<br />現在は開発エンジニアを目標として、最近WEB HTML , CSS, Javascript を独学で進めております。
+      <br />今回のportfolioは現在、知識が足りない私に勉強の為、作成しております。
     </p>
     <div class="abuout_majors">
       <div class="major_icon"></div>
@@ -68,10 +68,62 @@
       <p class="job_period"></p>
       2019年5月から2020年6月10日
     </div>
-    <div class="job"></div>
   </section>
   <!-- Skills -->
-  <section id="skills"></section>
+  <section id="skills">
+    <h1>Skills</h1>
+    <h2>Skills & Attributes</h2>
+    <p>人材派遣により、三菱重工業 民間航空機の生産技術エンジニアとして業務を行いました。<br />主業務として現場サポート、治具オーダー作成、作業指示書作成を携わりました。
+      <br />これらの業務を通じて、CAD製図、CATIA図面確認、Microsoft Access、Microsoft Excel、などのスキルを習得しました。
+      <br />また、開発経験はありませんが、新しいことを学ぶのが好きであり、計画を立てて業務を行うため、
+      <br />チームワークの環境でも上手く進むことが出来ます。
+      <br />今後はweb、システム 関係の開発エンジニアになり、自分の価値を見せたいと考えております。
+    </p>
+    <div class="skillset">
+      <div class="skillset_left">
+        <h3 class="skillset_title">Skills</h3>
+        <div class="skill">
+          <div class="skill_description">
+            <span>HTML</span>
+            <span>30%</span>
+          </div>
+          <div class="skill_bar">
+            <div class="skill_value"></div>
+            <div class="skill">
+              <div class="skill_description">
+                <span>CSS</span>
+                <span>20%</span>
+              </div>
+              <div class="skill_bar">
+                <div class="skill_value"></div>
+                <div class="skill">
+                  <div class="skill_description">
+                    <span>Javascript</span>
+                    <span>15%</span>
+                  </div>
+                  <div class="skill_bar">
+                    <div class="skill_value"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="skillset_right"></div>
+              <div class="tools">
+                <h3 class="skillset_title">tools</h3>
+                <ul class="tools_list">
+                  <li>
+                    <span>Visual Studio Code</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="etc">
+                <h3 class="skillset_title">etc</h3>
+                <ul class="etc_list">
+                  <li><span>CATIA</span></li>
+                  <li><span>the Japanese language</span></li>
+                  <li><span>the korean language</span></li>
+                </ul>
+              </div>
+  </section>
   <!-- Work -->
   <section id="work"></section>
   <!-- Contact -->
