--- a/index.html
+++ b/index.html
@@ -125,7 +125,26 @@
               </div>
   </section>
   <!-- Work -->
-  <section id="work"></section>
+  <section id="work">
+    <h1>My work</h1>
+    <h3>Projects</h3>
+    <div class="work_caregories">
+      <button class="cotegory_btn">All <span class="category_count">2</span></button>
+      <button class="cotegory_btn">Space jet 三菱航空機 <span class="category_count">1</span></button>
+      <button class="cotegory_btn">Front-end <span class="category_count">1</span></button>
+    </div>
+
+    <div class="work_projects">
+      <a href="https://www.youtube.com/watch?v=Ddy43mteagQ" class="project" target="blank">
+        <img src="image/projets/spacejet.jpg" alt="youtube">
+        <div class="project_description">
+          <h3>youtube site</h3>
+          <span>担当した三菱航空機の初飛行test 映像</span>
+        </div>
+      </a>
+
+    </div>
+  </section>
   <!-- Contact -->
   <section id="contact"></section>
 </body>
