--- a/index.html
+++ b/index.html
@@ -142,11 +142,21 @@
           <span>担当した三菱航空機の初飛行test 映像</span>
         </div>
       </a>
-
     </div>
   </section>
   <!-- Contact -->
-  <section id="contact"></section>
+  <section id="contact">
+    <h1 class="contact_title">Let's talk</h1>
+    <h2 class="contack_email">sinwook26013@gmail.com</h2>
+    <div class="contact_links">
+      <a href="https://github.com/shinwook90" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <p class="contact_rights">
+      2020 shinwook's portfolio
+    </p>
+  </section>
 </body>
 
 
