--- a/index.html
+++ b/index.html
@@ -16,22 +16,22 @@
 
 <body>
   <!-- Navbar -->
-  <nav id="navbar"></nav>
-  <div class="navbar_logo">
-    <i class="fas fa-star"></i>
-    <a href="#">Shinwook</a>
-  </div>
-  <div class="navbar_munu">
-    <ul class="navbar_menu">
-      <li class="navbar_munu_item">Home</li>
-      <li class="navbar_munu_item">About me</li>
-      <li class="navbar_munu_item">Skills</li>
-      <li class="navbar_munu_item">My work</li>
-      <li class="navbar_munu_item">Contact</li>
-
-    </ul>
-    </ul>
-  </div>
+  <nav id="navbar">
+    <div class="navbar_logo">
+      <i class="fas fa-star"></i>
+      <a href="#">Shinwook</a>
+    </div>
+    <div class="navbar_munu">
+      <ul class="navbar_menu">
+        <li class="navbar_munu_item active">Home</li>
+        <li class="navbar_munu_item">About me</li>
+        <li class="navbar_munu_item">Skills</li>
+        <li class="navbar_munu_item">My work</li>
+        <li class="navbar_munu_item">Contact</li>
+      </ul>
+    </div>
+  </nav>
+  
   <!-- Home -->
   <section id="Home"></section>
   <img src="image/3.5X4.5 KANGSHINWOOK.jpg" alt="Shinwook's portfolio photo" class="home_avatar">
