--- a/index.html
+++ b/index.html
@@ -33,13 +33,19 @@
   </nav>
   
   <!-- Home -->
-  <section id="Home"></section>
-  <img src="image/3.5X4.5 KANGSHINWOOK.jpg" alt="Shinwook's portfolio photo" class="home_avatar">
-  <h1 class="home_title">初めまして　<br />私は姜　信郁と申します。</h1>
-  <h2 class="home_description">開発エンジニアになり、自分の価値を上がりたいと考えている韓国人です。。</h2>
+  <section id="Home">
+  <img 
+  src="image/3.5X4.5 KANGSHINWOOK.jpg"
+  alt="Shinwook's portfolio photo" 
+  class="home_avatar"
+  />
+  <h1 class="home_title"><br />初めまして　<br />私は姜　信郁と申します。</h1>
+  <h2 class="home_description"><br />開発エンジニアになり、自分の価値を上がりたいと考えている韓国人です。
+  </h2>
   <button class="home_contact">Contact Me</button>
+  </section>
 
-  <!-- About -->
+  <!-- About --> 
   <section id="about">
     <h1>About me</h1>
     <p>現在まで、開発やit 業界で経験はありません。私は航空宇宙工学科を専攻し、１９年度大学を卒業しました。<br />人材派遣で19年５月から三菱重工業　民間航空機　生産技術部に配属され、生産管理及びドキュメント手順作成等
