--- a/index.html
+++ b/index.html
@@ -31,46 +31,54 @@
       </ul>
     </div>
   </nav>
-  
+
   <!-- Home -->
-  <section id="Home"></section>
-  <img src="image/3.5X4.5 KANGSHINWOOK.jpg" alt="Shinwook's portfolio photo" class="home_avatar">
-  <h1 class="home_title">初めまして　<br />私は姜　信郁と申します。</h1>
-  <h2 class="home_description">開発エンジニアになり、自分の価値を上がりたいと考えている韓国人です。。</h2>
-  <button class="home_contact">Contact Me</button>
+  <section id="Home">
+    <img src="image/3.5X4.5 KANGSHINWOOK.jpg" alt="Shinwook's portfolio photo" class="home_avatar">
+    <h1 class="home_title">初めまして　<br />私は姜　信郁と申します。</h1>
+    <h2 class="home_description">開発エンジニアになり、自分の価値を上がりたいと考えている韓国人です。。</h2>
+    <button class="home_contact">Contact Me</button>
+  </section>
+
 
   <!-- About -->
-  <section id="about">
+  <section id="about" class="section">
     <h1>About me</h1>
-    <p>現在まで、開発やit 業界で経験はありません。私は航空宇宙工学科を専攻し、１９年度大学を卒業しました。<br />人材派遣で19年５月から三菱重工業　民間航空機　生産技術部に配属され、生産管理及びドキュメント手順作成等
+    <p>現在まで、開発やit
+      業界で経験はありません。私は航空宇宙工学科を専攻し、１９年度大学を卒業しました。<br />人材派遣で19年５月から三菱重工業　民間航空機　生産技術部に配属され、<br />生産管理及びドキュメント手順作成等
       の業務を担当しました。<br />現在は開発エンジニアを目標として、最近WEB HTML , CSS, Javascript を独学で進めております。
       <br />今回のportfolioは現在、知識が足りない私に勉強の為、作成しております。
     </p>
-    <div class="abuout_majors">
-      <div class="major_icon"></div>
-      <i class="fas fa-plane"></i>
-      <div class="major_title">生産技術</div>
-      <div class="major_description"></div>
-      ドキュメント手順作成、治工具オーダー作成、生産管理
+    <div class="about_majors">
+      <div class="major">
+        <div class="major_icon">
+          <i class="fas fa-plane"></i>
+        </div>
+        <h2 class="major_title">生産技術</h2>
+        <p class="major_description">ドキュメント手順作成、治工具オーダー作成、生産管理
+        </p>
+      </div>
+      <div class="major">
+        <div class="major_icon">
+          <i class="fab fa-html5"></i>
+        </div>
+        <h2 class="major_title">フロントエンド</h2>
+        <p class="major_description">現在、HTML, CSS, javascriptを勉強中です
+        </p>
+      </div>
     </div>
-    <div class="abuout_majors">
-      <div class="major_icon"></div>
-      <i class="fab fa-html5"></i>
-      <div class="major_title">フロントエンド</div>
-      <div class="major_description"></div>
-      現在、HTML, CSS, javascriptを勉強中です。
-    </div>
-    <div class="about_jobs"></div>
-    <div class="job">
-      <img src="image/jobs/mitu.png" alt="三菱重工業" class="job_logo">
-      <p class="job_name"></p>
-      生産技術者
-      <p class="job_period"></p>
-      2019年5月から2020年6月10日
-    </div>
+
+    <div class="about_jobs">
+      <div class="job">
+        <img src="image/jobs/mitu.png" alt="三菱重工業" class="job_logo">
+        <p class="job_name"></p>
+        生産技術者
+        <p class="job_period"></p>
+        2019年5月から2020年6月10日
+      </div>
   </section>
   <!-- Skills -->
-  <section id="skills">
+  <section id="skills" class="section">
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
     <p>人材派遣により、三菱重工業 民間航空機の生産技術エンジニアとして業務を行いました。<br />主業務として現場サポート、治具オーダー作成、作業指示書作成を携わりました。
@@ -125,7 +133,7 @@
               </div>
   </section>
   <!-- Work -->
-  <section id="work">
+  <section id="work" class="section">
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work_caregories">
@@ -145,7 +153,7 @@
     </div>
   </section>
   <!-- Contact -->
-  <section id="contact">
+  <section id="contact" class="section">
     <h1 class="contact_title">Let's talk</h1>
     <h2 class="contack_email">sinwook26013@gmail.com</h2>
     <div class="contact_links">
