--- a/index.html
+++ b/index.html
@@ -70,11 +70,15 @@
 
     <div class="about_jobs">
       <div class="job">
-        <img src="image/jobs/mitu.png" alt="三菱重工業" class="job_logo">
-        <p class="job_name"></p>
-        生産技術者
-        <p class="job_period"></p>
-        2019年5月から2020年6月10日
+        <img src="image/jobs/mitu.png" 
+        alt="三菱重工業" 
+        class="job_logo">
+        <div class="job_discription">
+          <p class="job_name"></p>
+          生産技術者
+          <p class="job_period"></p>
+          2019年5月から2020年6月10日  
+        </div>
       </div>
   </section>
   <!-- Skills -->
