--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
   <!-- About -->
-  <section id="about" class="section">
+  <section id="about" class="section  section_container ">
     <h1>About me</h1>
     <p>現在まで、開発やit
       業界で経験はありません。私は航空宇宙工学科を専攻し、１９年度大学を卒業しました。<br />人材派遣で19年５月から三菱重工業　民間航空機　生産技術部に配属され、<br />生産管理及びドキュメント手順作成等
@@ -81,15 +81,19 @@
         </div>
       </div>
   </section>
+
   <!-- Skills -->
   <section id="skills" class="section">
+    <div class="section_container">
     <h1>Skills</h1>
     <h2>Skills & Attributes</h2>
-    <p>人材派遣により、三菱重工業 民間航空機の生産技術エンジニアとして業務を行いました。<br />主業務として現場サポート、治具オーダー作成、作業指示書作成を携わりました。
-      <br />これらの業務を通じて、CAD製図、CATIA図面確認、Microsoft Access、Microsoft Excel、などのスキルを習得しました。
-      <br />また、開発経験はありませんが、新しいことを学ぶのが好きであり、計画を立てて業務を行うため、
-      <br />チームワークの環境でも上手く進むことが出来ます。
-      <br />今後はweb、システム 関係の開発エンジニアになり、自分の価値を見せたいと考えております。
+    <p>
+      人材派遣により、三菱重工業 民間航空機の生産技術エンジニアとして業務を行いました。
+      主業務として現場サポート、治具オーダー作成、作業指示書作成を携わりました。
+      これらの業務を通じて、CAD製図、CATIA図面確認、Microsoft Access、Microsoft Excel、などのスキルを習得しました。 
+      また、開発経験はありませんが、新しいことを学ぶのが好きであり、計画を立てて業務を行うため、
+      チームワークの環境でも上手く進むことが出来ます。
+      今後はweb、システム 関係の開発エンジニアになり、自分の価値を見せたいと考えております。
     </p>
     <div class="skillset">
       <div class="skillset_left">
@@ -99,8 +103,15 @@
             <span>HTML</span>
             <span>30%</span>
           </div>
+        </div>
+      </div>
+      <div class="skillset_right"></div>
+    </div>
+
+  <!-- Skills 확인 할곳-->
           <div class="skill_bar">
             <div class="skill_value"></div>
+            
             <div class="skill">
               <div class="skill_description">
                 <span>CSS</span>
@@ -122,8 +133,7 @@
               <div class="tools">
                 <h3 class="skillset_title">tools</h3>
                 <ul class="tools_list">
-                  <li>
-                    <span>Visual Studio Code</span>
+                  <li><span>Visual Studio Code</span>
                   </li>
                 </ul>
               </div>
@@ -134,6 +144,7 @@
                   <li><span>the Japanese language</span></li>
                   <li><span>the korean language</span></li>
                 </ul>
+                </div>
               </div>
   </section>
   <!-- Work -->
