--- a/index.html
+++ b/index.html
@@ -101,51 +101,55 @@
         <div class="skill">
           <div class="skill_description">
             <span>HTML</span>
-            <span>30%</span>
+            <span>30%..ing</span>
+          </div>
+          <div class="skill_bar">
+            <div class="skill_value">
+            </div>
           </div>
         </div>
-      </div>
-      <div class="skillset_right"></div>
-    </div>
 
-  <!-- Skills 확인 할곳-->
+        <div class="skill">
+          <div class="skill_description">
+            <span>css</span>
+            <span>15%..ing</span>
+          </div>
           <div class="skill_bar">
-            <div class="skill_value"></div>
-            
-            <div class="skill">
-              <div class="skill_description">
-                <span>CSS</span>
-                <span>20%</span>
-              </div>
-              <div class="skill_bar">
-                <div class="skill_value"></div>
-                <div class="skill">
-                  <div class="skill_description">
-                    <span>Javascript</span>
-                    <span>15%</span>
-                  </div>
-                  <div class="skill_bar">
-                    <div class="skill_value"></div>
-                  </div>
-                </div>
-              </div>
-              <div class="skillset_right"></div>
-              <div class="tools">
-                <h3 class="skillset_title">tools</h3>
-                <ul class="tools_list">
-                  <li><span>Visual Studio Code</span>
-                  </li>
-                </ul>
-              </div>
-              <div class="etc">
-                <h3 class="skillset_title">etc</h3>
-                <ul class="etc_list">
-                  <li><span>CATIA</span></li>
-                  <li><span>the Japanese language</span></li>
-                  <li><span>the korean language</span></li>
-                </ul>
-                </div>
-              </div>
+            <div class="skill_value" style="width:90%;">
+            </div>
+          </div>
+        </div>
+
+        <div class="skill">
+          <div class="skill_description">
+            <span>Javascript</span>
+            <span>15%..ing</span>
+          </div>
+          <div class="skill_bar">
+            <div class="skill_value" style="width:90%;">
+            </div>
+          </div>
+        </div>
+<!-- Skills 복사 할곳--> 
+      
+      </div>
+      <div class="skillset_right">
+        <div class="tools">
+          <h3 class="skillset_title">Tools</h3>
+          <ul class="tools_list">
+            <li><span>Visual Studio Code</span></li>
+          </ul>
+        </div>
+        <div class="etc">
+          <h3 class="skillset_title">Etc</h3>
+          <ul class="etc_list">
+            <li><span>CATIA</span></li>
+            <li><span>the Japanese language</span></li>
+            <li><span>the korean language</span></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </section>
   <!-- Work -->
   <section id="work" class="section">
