--- a/index.html
+++ b/index.html
@@ -152,13 +152,19 @@
     </div>
   </section>
   <!-- Work -->
-  <section id="work" class="section">
+  < id="work" class="section">
     <h1>My work</h1>
     <h3>Projects</h3>
-    <div class="work_caregories">
-      <button class="cotegory_btn">All <span class="category_count">2</span></button>
-      <button class="cotegory_btn">Space jet 三菱航空機 <span class="category_count">1</span></button>
-      <button class="cotegory_btn">Front-end <span class="category_count">1</span></button>
+    <div class="work_categories">
+      <button class="category_btn active">
+        All <span class="category_count">2</span>
+      </button>
+      <button class="category_btn ">
+        Space jet 三菱航空機 <span class="category_count">1</span>
+      </button>
+      <button class="category_btn ">
+        Front-end <span class="category_count">1</span>
+      </button>
     </div>
 
     <div class="work_projects">
