--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@
       </div>
     </div>
   </section>
-  <!-- Work -->
-  < id="work" class="section">
+  <!-- Work  수정중 --> 
+  <section id="work">
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work_categories">
-      <button class="category_btn active">
+      <button class="category_btn">
         All <span class="category_count">2</span>
       </button>
-      <button class="category_btn ">
-        Space jet 三菱航空機 <span class="category_count">1</span>
+      <button class="category_btn">
+        Space jet 三菱航空 <span class="category_count">1</span>
       </button>
-      <button class="category_btn ">
+      <button class="category_btn">
         Front-end <span class="category_count">1</span>
       </button>
     </div>
@@ -176,7 +176,9 @@
         </div>
       </a>
     </div>
+
   </section>
+
   <!-- Contact -->
   <section id="contact" class="section">
     <h1 class="contact_title">Let's talk</h1>
