--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     </div>
   </section>
   <!-- Work  수정중 --> 
-  <section id="work">
+  <section id="work" class="section">
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work_categories">
@@ -168,11 +168,25 @@
     </div>
 
     <div class="work_projects">
-      <a href="https://www.youtube.com/watch?v=Ddy43mteagQ" class="project" target="blank">
-        <img src="image/projets/spacejet.jpg" alt="youtube">
+      <a href="https://www.youtube.com/watch?v=Ddy43mteagQ" 
+      class="project" 
+      target="blank">
+        <img src="image/projets/spacejet.jpg" alt="operation">
         <div class="project_description">
-          <h3>youtube site</h3>
+          <h3>民間航空機生産技術</h3>
           <span>担当した三菱航空機の初飛行test 映像</span>
+        </div>
+      </a>
+    </div>
+
+    <div class="work_projects">
+      <a href="https://github.com/shinwook90/portfolio" 
+      class="project" 
+      target="blank">
+        <img src="image/projets/iphone-200521-195335.png" alt="clone coding">
+        <div class="project_description">
+          <h3>clone coding</h3>
+          <span>予定</span>
         </div>
       </a>
     </div>
