--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         All <span class="category_count">2</span>
       </button>
       <button class="category_btn">
-        Space jet 三菱航空 <span class="category_count">1</span>
+        Space Jet 三菱航空機 <span class="category_count">1</span>
       </button>
       <button class="category_btn">
         Front-end <span class="category_count">1</span>
@@ -170,27 +170,32 @@
     <div class="work_projects">
       <a href="https://www.youtube.com/watch?v=Ddy43mteagQ" 
       class="project" 
+      date-type="Space Jet 三菱航空機"
       target="blank">
-        <img src="image/projets/spacejet.jpg" alt="operation">
+        <img src="image/projets/spacejet.jpg" 
+        alt="operation" 
+        class="project_img"/>
         <div class="project_description">
-          <h3>民間航空機生産技術</h3>
+          <h3>民間航空機 生産技術</h3>
           <span>担当した三菱航空機の初飛行test 映像</span>
         </div>
       </a>
-    </div>
 
-    <div class="work_projects">
       <a href="https://github.com/shinwook90/portfolio" 
       class="project" 
+      date-type="Front-end"
       target="blank">
-        <img src="image/projets/iphone-200521-195335.png" alt="clone coding">
+        <img src="image/projets/iphone-200521-195335.png" 
+        alt="clone coding" 
+        class="project_img"/>
+        
         <div class="project_description">
           <h3>clone coding</h3>
           <span>予定</span>
         </div>
-      </a>
+        </a>
+      
     </div>
-
   </section>
 
   <!-- Contact -->
