--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       class="project" 
       date-type="Space Jet 三菱航空機"
       target="blank">
-        <img src="image/projets/spacejet.jpg" 
+        <img src="image/projets/img_mrj.jpg" 
         alt="operation" 
         class="project_img"/>
         <div class="project_description">
@@ -201,7 +201,7 @@
   <!-- Contact -->
   <section id="contact" class="section">
     <h1 class="contact_title">Let's talk</h1>
-    <h2 class="contack_email">sinwook26013@gmail.com</h2>
+    <h2 class="contact_email">sinwook26013@gmail.com</h2>
     <div class="contact_links">
       <a href="https://github.com/shinwook90" target="_blank">
         <i class="fab fa-github"></i>
