--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <div class="skill">
           <div class="skill_description">
-            <span>css</span>
+            <span>CSS</span>
             <span>15%..ing</span>
           </div>
           <div class="skill_bar">
@@ -156,7 +156,7 @@
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work_categories">
-      <button class="category_btn">
+      <button class="category_btn active">
         All <span class="category_count">2</span>
       </button>
       <button class="category_btn">
