CSS navbar toggle

--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
         <li class="navbar_munu_item">Contact</li>
       </ul>
     </div>
+  <!-- Toggle button -->
+<button class="navbar_toggle-btn">
+  <i class="fas fa-bars"></i>
+</button>
   </nav>
+
 
   <!-- Home -->
   <section id="Home">
