JS ; Transparent home

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
 
   <!-- Home -->
   <section id="Home">
+  <div class="home_container">
     <img src="image/3.5X4.5 KANGSHINWOOK.jpg" alt="Shinwook's portfolio photo" class="home_avatar">
     <h1 class="home_title">初めまして　<br />私は姜　信郁と申します。</h1>
     <h2 class="home_description">開発エンジニアになり、自分の価値を上がりたいと考えている韓国人です。。</h2>
     <button class="home_contact">Contact Me</button>
+  </div>
   </section>
 
 
