Js : Arrow up button

--- a/index.html
+++ b/index.html
@@ -205,6 +205,11 @@
       2020 shinwook's portfolio
     </p>
   </section>
+
+  <!-- arrow up-->
+  <button class="arrow-up">
+    <i class="fas fa-arrow-up"></i>
+  </button>
 </body>
 
 
