--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <div class="home_container">
     <img src="image/3.5X4.5 KANGSHINWOOK.jpg" alt="Shinwook's portfolio photo" class="home_avatar">
     <h1 class="home_title">初めまして　<br />私は姜　信郁と申します。</h1>
-    <h2 class="home_description">開発エンジニアになり、自分の価値を上がりたいと考えている韓国人です。。</h2>
+    <h2 class="home_description">開発エンジニアになり、自分の価値を上げたいと考えている韓国人です。。</h2>
     <button class="home_contact">Contact Me</button>
   </div>
   </section>
@@ -160,19 +160,19 @@
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work_categories">
-      <button class="category_btn active">
+      <button class="category_btn active" data-filter="*">
         All <span class="category_count">2</span>
       </button>
-      <button class="category_btn">
+      <button class="category_btn" data-filter="Space Jet 三菱航空機">
         Space Jet 三菱航空機 <span class="category_count">1</span>
       </button>
-      <button class="category_btn">
+      <button class="category_btn" data-filter="Front-end">
         Front-end <span class="category_count">1</span>
       </button>
     </div>
 
     <div class="work_projects">
-      <a href="https://www.youtube.com/watch?v=Ddy43mteagQ" class="project" date-type="Space Jet 三菱航空機" target="blank">
+      <a href="" class="project" date-type="Space Jet 三菱航空機" target="blank">
         <img src="image/projets/img_mrj.jpg" alt="operation" class="project_img" />
         <div class="project_description">
           <h3>民間航空機 生産技術</h3>
@@ -180,7 +180,7 @@
         </div>
       </a>
 
-      <a href="https://github.com/shinwook90/portfolio" class="project" date-type="Front-end" target="blank">
+      <a href="" class="project" date-type="Front-end" target="blank">
         <img src="image/projets/iphone-200521-195335.png" alt="clone coding" class="project_img" />
 
         <div class="project_description">
