Js Transparent My work _ error

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
     </div>
 
     <div class="work_projects">
-      <a href="" class="project" date-type="Space Jet 三菱航空機" target="blank">
+      <a href="https://www.youtube.com/watch?v=Ddy43mteagQ" class="project" date-type="Space Jet 三菱航空機" target="blank">
         <img src="image/projets/img_mrj.jpg" alt="operation" class="project_img" />
         <div class="project_description">
           <h3>民間航空機 生産技術</h3>
@@ -180,7 +180,7 @@
         </div>
       </a>
 
-      <a href="" class="project" date-type="Front-end" target="blank">
+      <a href="https://github.com/shinwook90" class="project" date-type="Front-end" target="blank">
         <img src="image/projets/iphone-200521-195335.png" alt="clone coding" class="project_img" />
 
         <div class="project_description">
