JS project filtering 2

--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
       <button class="category_btn active" data-filter="*">
         All <span class="category_count">2</span>
       </button>
-      <button class="category_btn" data-filter="space jet 三菱航空機">
+      <button class="category_btn" data-filter="Space Jet 三菱航空機">
         Space Jet 三菱航空機 <span class="category_count">1</span>
       </button>
-      <button class="category_btn" data-filter="front-end">
+      <button class="category_btn" data-filter="Front-end">
         Front-end <span class="category_count">1</span>
       </button>
     </div>
 
     <div class="work_projects">
-      <a href="https://www.youtube.com/watch?v=Ddy43mteagQ" class="project" data-type="space jet 三菱航空機" target="blank">
+      <a href="https://www.youtube.com/watch?v=Ddy43mteagQ" class="project" data-type="Space Jet 三菱航空機" target="blank">
         <img src="image/projets/img_mrj.jpg" alt="operation" class="project_img" />
         <div class="project_description">
           <h3>民間航空機 生産技術</h3>
@@ -180,7 +180,7 @@
         </div>
       </a>
 
-      <a href="https://github.com/shinwook90" class="project" data-type="front-end" target="blank">
+      <a href="https://github.com/shinwook90" class="project" data-type="Front-end" target="blank">
         <img src="image/projets/iphone-200521-195335.png" alt="clone coding" class="project_img" />
 
         <div class="project_description">
