JS : navbar menu toggle Btn

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     <h1>My work</h1>
     <h3>Projects</h3>
     <div class="work_categories">
-      <button class="category_btn active" data-filter="*">
+      <button class="category_btn selected" data-filter="*">
         All <span class="category_count">2</span>
       </button>
       <button class="category_btn" data-filter="Space Jet 三菱航空機">
