--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <section id="about" class="section  section_container ">
     <h1>About me</h1>
     <p>現在まで、開発やit
-      業界で経験はありません。私は航空宇宙工学科を専攻し、１９年度大学を卒業しました。<br />人材派遣で19年５月から三菱重工業　民間航空機　生産技術部に配属され、<br />生産管理及びドキュメント手順作成等
+      業界で経験はありません。<br />私は航空宇宙工学科を専攻し、１９年度大学を卒業しました。<br />人材派遣で19年５月から三菱重工業　民間航空機　生産技術部に配属され、<br />生産管理及びドキュメント手順作成等
       の業務を担当しました。<br />現在は開発エンジニアを目標として、最近WEB HTML , CSS, Javascript を独学で進めております。
       <br />今回のportfolioは現在、知識が足りない私に勉強の為、作成しております。
     </p>
